test/resources/invalid/com/boothj5/jarchexample/configuration/facade/ConfigurationFacade.java
package com.boothj5.jarchexample.configuration.facade;

import java.util.List;

import com.boothj5.jarchexample.common.*;
import com.boothj5.jarchexample.configuration.service.PersonService;
